projects/side_stuff/k8s/istio-up-and-running/bookinfo/review-destination.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  host: reviews # short name of reviews.svc.default.cluster.local, so make sure svc is in namespace or use FQDN
  trafficPolicy:
    loadBalancer:
      simple: PASSTHROUGH # routes to host with fewer active requests(also ROUND_ROBIN, LEAST_CONN, RANDOM)
  subsets:
  - name: v1
    labels:
      version: v1 # matches the label on the review deployment
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: RANDOM # can set the traffic policy per subset
