projects/side_stuff/k8s/istio-up-and-running/bookinfo/virtual-svc1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "bookinfo.app"
  gateways:
    - bookinfo-gateway
  http:
  - match:
      - uri:
          exact: /productpage
      - uri:
          prefix: /static
      - uri:
          exact: /login
      - uri:
          exact: /logout
      - uri:
          prefix: /api/v1/products
  route: 
  - destination:
      host: productpage
      port:
        number: 9080
  timeout: 3s
